# Neco-lang-v2

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  travis.yml
benchmark/: CMakeLists.txt
example/: CMakeLists.txt  fibonacci.cpp  hello_world.cpp  higher_order.cpp  if.cpp
include/nlv2/: core.hpp
include/nlv2/config/: config.hpp  intrin.hpp
include/nlv2/core/: BoxedHeapObject.hpp  HeapObject.hpp  StaticTypeUtil.hpp
include/tori/: all.hpp  core.hpp  lib.hpp
include/tori/config/: compatibility.hpp  config.hpp  intrin.hpp
include/tori/core/: Apply.hpp  BoxedHeapObject.hpp  CString.hpp  ClosureCast.hpp  Compatibility.hpp  DynamicTypeUtil.hpp  Eval.hpp  Exception.hpp  Fix.hpp  Function.hpp  HeapObject.hpp  Primitive.hpp  StaticTypeUtil.hpp  String.hpp  Thunk.hpp  Type.hpp  TypeGen.hpp  TypeValue.hpp  Util.hpp  ValueCast.hpp  apply.hpp  atomic.hpp  atomic_refcount.hpp  bad_value_cast.hpp  box.hpp  boxed.hpp  closure_cast.hpp  dynamic_typing.hpp  eval.hpp  eval_error.hpp  exception.hpp  fix.hpp  function.hpp  immediate.hpp  meta_pair.hpp  meta_set.hpp  meta_tuple.hpp  meta_type.hpp  object.hpp  object_cast.hpp  (+22 more)
include/tori/lib/: BinaryOperator.hpp  Identity.hpp  If.hpp  Primitive.hpp  Thunk.hpp  Unit.hpp  Util.hpp  binary_operator.hpp  identity.hpp  if.hpp  primitive.hpp  unit.hpp  util.hpp
test/core/: CMakeLists.txt  Compatibility.cpp  Function.cpp  StaticTyping.cpp  apply.cpp  dynamic_typing.cpp  eval.cpp  function.cpp  object_ptr.cpp  static_typing.cpp
